force-app/main/default/objects/msf_InteractionsMasterData__c/msf_InteractionsMasterData__c.object-meta.xml
<CustomObject>
    <label>Maestro de datos de Interacciones</label>
    <nameField>
        <displayFormat>MD_IN_{00000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maestro de datos de Interacciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>