force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_AttributeFive__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeFive__c</fullName>
    <label>Atributo 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>