force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_AttributeOne__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeOne__c</fullName>
    <label>Atributo 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>