force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_AttributeTwo__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeTwo__c</fullName>
    <label>Atributo 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>