force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Campaign__c.field-meta.xml
<CustomField>
    <fullName>msf_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Maestro de datos de Interacciones</relationshipLabel>
    <relationshipName>Maestro_de_datos_de_Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>