force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Channel__c.field-meta.xml
<CustomField>
    <fullName>msf_Channel__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_Channel</valueSetName>
    </valueSet>
</CustomField>