force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Comment__c.field-meta.xml
<CustomField>
    <fullName>msf_Comment__c</fullName>
    <label>Comentario</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>