force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Commitment__c.field-meta.xml
<CustomField>
    <fullName>msf_Commitment__c</fullName>
    <label>Commitment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>