force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_GenerateTask__c.field-meta.xml
<CustomField>
    <fullName>msf_GenerateTask__c</fullName>
    <label>Genera la Tarea</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>