force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadSource__c</fullName>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource1</valueSetName>
    </valueSet>
</CustomField>