force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Objective__c.field-meta.xml
<CustomField>
    <fullName>msf_Objective__c</fullName>
    <label>Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_Objective</valueSetName>
    </valueSet>
</CustomField>