force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Owner__c.field-meta.xml
<CustomField>
    <fullName>msf_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado a</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Maestro_de_datos_de_Interacciones</relationshipName>
    <type>Lookup</type>
</CustomField>