force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_ProactiveReactive__c.field-meta.xml
<CustomField>
    <fullName>msf_ProactiveReactive__c</fullName>
    <label>Proactiva / Reactiva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ProactiveReactive</valueSetName>
    </valueSet>
</CustomField>