force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_ProductProgram__c.field-meta.xml
<CustomField>
    <fullName>msf_ProductProgram__c</fullName>
    <label>Producto / Programa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ProductProgram</valueSetName>
    </valueSet>
</CustomField>