force-app/main/default/objects/msf_InteractionsMasterData__c/fields/MSF_ServiceOwner__c.field-meta.xml
<CustomField>
    <fullName>MSF_ServiceOwner__c</fullName>
    <label>Propietario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ServiceOwner</valueSetName>
    </valueSet>
</CustomField>