force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Status__c.field-meta.xml
<CustomField>
    <fullName>msf_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Eliminada</fullName>
            </value>
            <value>
                <fullName>En curso</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Sin gestión</fullName>
            </value>
            <value>
                <fullName>Inalcanzable</fullName>
            </value>
            <value>
                <fullName>No requerido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>