force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_Subject__c.field-meta.xml
<CustomField>
    <fullName>msf_Subject__c</fullName>
    <label>Asunto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abogado, Familiar o un Tercero Reclama sobre una Herencia (Retraso, Pago Pendiente, Comparecencia, etc)</fullName>
            </value>
            <value>
                <fullName>ACMA Envia Justificante Pago Cuota Asociado</fullName>
            </value>
            <value>
                <fullName>ACTUA COMO ALTAVOZ</fullName>
                <isActive>false</isActive>
                <label>ACTUA COMO ALTAVOZ</label>
            </value>
            <value>
                <fullName>Actúa Como Altavoz</fullName>
            </value>
            <value>
                <fullName>Actúa como Aval</fullName>
            </value>
            <value>
                <fullName>ACTUA COMO PORTAVOZ HERENCIAS</fullName>
                <isActive>false</isActive>
                <label>ACTUA COMO PORTAVOZ HERENCIAS</label>
            </value>
            <value>
                <fullName>Actúa Como Portavoz Herencias</fullName>
            </value>
            <value>
                <fullName>ACTUA COMO VOLUNTARIO</fullName>
                <isActive>false</isActive>
                <label>ACTUA COMO VOLUNTARIO</label>
            </value>
            <value>
                <fullName>Actúa Como Voluntario</fullName>
            </value>
            <value>
                <fullName>Actúa como Voluntario Asociativo</fullName>
            </value>
            <value>
                <fullName>AGRADECIMIENTO ANUAL</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO ANUAL</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO ASISTENCIA A ENTREVISTA O REUNION</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO ASISTENCIA A ENTREVISTA O REUNION</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO ASISTENCIA A EVENTO O EXPOSICION</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO ASISTENCIA A EVENTO O EXPOSICION</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO ASISTENCIA A VISITA</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO ASISTENCIA A VISITA</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO AUMEN CUOTA</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO AUMEN CUOTA</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO CELEBRACIONES</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO CELEBRACIONES</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO CUOTA ANUAL</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO CUOTA ANUAL</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO DONATIVO</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO DONATIVO</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO EMPRESA SIN FRONTERAS ESF</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO EMPRESA SIN FRONTERAS ESF</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO FAMILIARES HERENCIAS</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO FAMILIARES HERENCIAS</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO INICIATIVA SOLIDARIA</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO INICIATIVA SOLIDARIA</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO OTROS (EL DONANTE HACE/ENVÍA ALGO)</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO OTROS (EL DONANTE HACE/ENVÍA ALGO)</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO PARTICIPA EN CAMPAÑA</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO PARTICIPA EN CAMPAÑA</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO REGALO SOLIDARIO</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO REGALO SOLIDARIO</label>
            </value>
            <value>
                <fullName>AGRADECIMIENTO TESTAMENTO A FAVOR</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMIENTO TESTAMENTO A FAVOR</label>
            </value>
            <value>
                <fullName>AGRADECIMINETO ENCUESTA</fullName>
                <isActive>false</isActive>
                <label>AGRADECIMINETO ENCUESTA</label>
            </value>
            <value>
                <fullName>Asiste a Charla PEU</fullName>
            </value>
            <value>
                <fullName>Asiste a Entrevista o Reunión</fullName>
            </value>
            <value>
                <fullName>Asiste a Evento Asociativo</fullName>
            </value>
            <value>
                <fullName>Asiste a Evento o Exposición</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>