force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_TaskNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_TaskNumber__c</fullName>
    <label>Número de tarea</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>