force-app/main/default/objects/msf_InteractionsMasterData__c/fields/msf_TypeTemplate__c.field-meta.xml
<CustomField>
    <fullName>msf_TypeTemplate__c</fullName>
    <label>Tipo / Pieza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_TypeTemplate</valueSetName>
    </valueSet>
</CustomField>