force-app/main/default/objects/msf_InteractionsMasterData__c/listViews/Copia_de_Todos.listView-meta.xml
<ListView>
    <fullName>Copia_de_Todos</fullName>
    <columns>msf_TaskNumber__c</columns>
    <columns>msf_Subject__c</columns>
    <columns>msf_InboundOutbound__c</columns>
    <columns>msf_ProactiveReactive__c</columns>
    <columns>msf_Family__c</columns>
    <columns>msf_Objective__c</columns>
    <columns>MSF_Thematic__c</columns>
    <columns>msf_Thematic2__c</columns>
    <columns>msf_TypeTemplate__c</columns>
    <columns>msf_GenerateTask__c</columns>
    <filterScope>Everything</filterScope>
    <label>Listado Tareas para Service Center</label>
    <sharedTo>
        <role>MSF</role>
        <role>Service_Center</role>
    </sharedTo>
</ListView>