force-app/main/default/objects/msf_InteractionsMasterData__c/listViews/MSF_All.listView-meta.xml
<ListView>
    <fullName>MSF_All</fullName>
    <columns>NAME</columns>
    <columns>msf_Subject__c</columns>
    <columns>msf_TaskNumber__c</columns>
    <columns>msf_Commitment__c</columns>
    <columns>msf_InboundOutbound__c</columns>
    <columns>msf_Channel__c</columns>
    <columns>msf_ProactiveReactive__c</columns>
    <columns>msf_Campaign__c</columns>
    <columns>msf_LeadSource__c</columns>
    <columns>msf_Comment__c</columns>
    <columns>msf_Family__c</columns>
    <columns>msf_Objective__c</columns>
    <columns>msf_Thematic2__c</columns>
    <columns>msf_ProductProgram__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <sharedTo>
        <role>MSF</role>
    </sharedTo>
</ListView>